add initial theme

--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -72,3 +72,9 @@
   border: 4px solid #f5e1a4;
   color: #4c432e;
 }
+
+.theme-initial {
+  background-color: initial;
+  border: 4px solid #000000;
+  color: initial;
+}
