feat: optimize security, UX, modern JS, and theme accessibility

--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -9,8 +9,8 @@
 
 .theme-blackboard {
   background-color: #000000;
-  border: 4px solid #5c5c5c;
   color: #fffdea;
+  border: 4px solid #757575;
 }
 
 .theme-gazette {
@@ -21,8 +21,8 @@
 
 .theme-espresso {
   background-color: #21211f;
-  border: 4px solid #4e4e4e;
   color: #d1b59a;
+  border: 4px solid #8c8c8c;
 }
 
 .theme-cab {
@@ -33,8 +33,8 @@
 
 .theme-cloud {
   background-color: #f1f2f0;
-  border: 4px solid #35342f;
   color: #37bbe4;
+  border: 4px solid #058bb3;
 }
 
 .theme-lime {
